force-app/main/default/objects/Product_Extension__c/Product_Extension__c.object-meta.xml
<CustomObject>
    <label>Product</label>
    <pluralLabel>Products</pluralLabel>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Central product master storing all product attributes including barcodes, pricing, weight, and ordering details (MOD-01 Master Data Management)</description>
</CustomObject>