force-app/main/default/objects/Product_Extension__c/fields/Barcode_EAN__c.field-meta.xml
<CustomField>
    <fullName>Barcode_EAN__c</fullName>
    <label>Barcode EAN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>