force-app/main/default/objects/Product_Extension__c/fields/Barcode_UPC__c.field-meta.xml
<CustomField>
    <fullName>Barcode_UPC__c</fullName>
    <label>Barcode UPC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>