force-app/main/default/objects/Product_Extension__c/fields/Base_UOM__c.field-meta.xml
<CustomField>
    <fullName>Base_UOM__c</fullName>
    <label>Base UOM</label>
    <type>Lookup</type>
    <referenceTo>UOM__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The base unit of measure for this product (links to the UOM master)</description>
</CustomField>