force-app/main/default/objects/Product_Extension__c/fields/Case_Size__c.field-meta.xml
<CustomField>
    <fullName>Case_Size__c</fullName>
    <label>Case Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>