force-app/main/default/objects/Product_Extension__c/fields/Channels__c.field-meta.xml
<CustomField>
    <fullName>Channels__c</fullName>
    <label>Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Trade channels this product is available in. Empty means available in all channels.</description>
</CustomField>