force-app/main/default/objects/Product_Extension__c/fields/GST_Rate__c.field-meta.xml
<CustomField>
    <fullName>GST_Rate__c</fullName>
    <label>GST Rate</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>GST tax rate applicable to this product</description>
</CustomField>