force-app/main/default/objects/Product_Extension__c/fields/Is_Returnable__c.field-meta.xml
<CustomField>
    <fullName>Is_Returnable__c</fullName>
    <label>Is Returnable</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this product can be returned</description>
</CustomField>