force-app/main/default/objects/Product_Extension__c/fields/Min_Order_Qty__c.field-meta.xml
<CustomField>
    <fullName>Min_Order_Qty__c</fullName>
    <label>Min Order Qty</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>