force-app/main/default/objects/Product_Extension__c/fields/MRP__c.field-meta.xml
<CustomField>
    <fullName>MRP__c</fullName>
    <label>MRP</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Maximum Retail Price</description>
</CustomField>