force-app/main/default/objects/Product_Extension__c/fields/Ordering_UOMs__c.field-meta.xml
<CustomField>
    <fullName>Ordering_UOMs__c</fullName>
    <description>Comma-separated UOM codes allowed for ordering this product (e.g., PC,CS,BX). If blank, only the base UOM is allowed.</description>
    <label>Ordering UOMs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>