force-app/main/default/objects/Product_Extension__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <required>true</required>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Extensions</relationshipLabel>
    <relationshipName>Product_Extensions</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>