force-app/main/default/objects/Product_Extension__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Category</label>
    <referenceTo>Product_Category__c</referenceTo>
    <relationshipLabel>Product Extensions</relationshipLabel>
    <relationshipName>Product_Extensions</relationshipName>
    <type>Lookup</type>
</CustomField>