force-app/main/default/objects/Product_Extension__c/fields/Product_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_URL__c</fullName>
    <label>Product Image URL</label>
    <type>Url</type>
    <description>URL to the product image</description>
</CustomField>