force-app/main/default/objects/Product_Extension__c/fields/Reorder_Level__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Level__c</fullName>
    <label>Reorder Level</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Minimum stock level that triggers reorder</description>
</CustomField>