force-app/main/default/objects/Product_Extension__c/fields/Reorder_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Quantity__c</fullName>
    <label>Reorder Quantity</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Standard quantity to reorder when stock falls below reorder level</description>
</CustomField>