force-app/main/default/objects/Product_Extension__c/fields/Secondary_UOM__c.field-meta.xml
<CustomField>
    <fullName>Secondary_UOM__c</fullName>
    <label>Secondary UOM</label>
    <type>Lookup</type>
    <referenceTo>UOM__c</referenceTo>
    <relationshipLabel>Products (Secondary UOM)</relationshipLabel>
    <relationshipName>Products_Secondary</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The secondary/alternate unit of measure for this product (e.g., Case when base is Piece)</description>
</CustomField>