force-app/main/default/objects/Product_Extension__c/fields/Shelf_Life_Days__c.field-meta.xml
<CustomField>
    <fullName>Shelf_Life_Days__c</fullName>
    <label>Shelf Life (Days)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Product shelf life in days</description>
</CustomField>