force-app/main/default/objects/Product_Extension__c/fields/SKU_Code__c.field-meta.xml
<CustomField>
    <fullName>SKU_Code__c</fullName>
    <label>SKU Code</label>
    <type>Text</type>
    <length>50</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Unique SKU identifier for the product</description>
</CustomField>