force-app/main/default/objects/Product_Extension__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Lookup</type>
    <referenceTo>Product_Category__c</referenceTo>
    <relationshipLabel>Products (Sub Category)</relationshipLabel>
    <relationshipName>Products_Sub_Category</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product sub-category classification</description>
</CustomField>