force-app/main/default/objects/Product_Extension__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Piece</fullName><default>true</default><label>Piece</label></value>
            <value><fullName>Box</fullName><default>false</default><label>Box</label></value>
            <value><fullName>Case</fullName><default>false</default><label>Case</label></value>
            <value><fullName>Kg</fullName><default>false</default><label>Kg</label></value>
            <value><fullName>Litre</fullName><default>false</default><label>Litre</label></value>
            <value><fullName>Dozen</fullName><default>false</default><label>Dozen</label></value>
            <value><fullName>Pack</fullName><default>false</default><label>Pack</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Unit of measurement for the product</description>
</CustomField>