force-app/main/default/objects/Product_Extension__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>3</scale>
</CustomField>