force-app/main/default/objects/Product_Extension__c/fields/Weight_Unit__c.field-meta.xml
<CustomField>
    <fullName>Weight_Unit__c</fullName>
    <label>Weight Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>kg</fullName>
            </value>
            <value>
                <fullName>g</fullName>
            </value>
            <value>
                <fullName>l</fullName>
            </value>
            <value>
                <fullName>ml</fullName>
            </value>
            <value>
                <fullName>units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>