force-app/main/default/objects/Product_Extension__c/validationRules/Case_Size_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Size_Positive</fullName>
    <active>true</active>
    <description>Case Size must be greater than zero when specified.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Case_Size__c)),
    Case_Size__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>Case_Size__c</errorDisplayField>
    <errorMessage>Case Size must be greater than zero.</errorMessage>
</ValidationRule>