force-app/main/default/objects/Product_Extension__c/validationRules/EAN_Barcode_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>EAN_Barcode_Format</fullName>
    <active>true</active>
    <description>EAN Barcode must be 8 or 13 digits when specified.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Barcode_EAN__c)),
    NOT(REGEX(Barcode_EAN__c, "^[0-9]{8}$|^[0-9]{13}$"))
)</errorConditionFormula>
    <errorDisplayField>Barcode_EAN__c</errorDisplayField>
    <errorMessage>EAN Barcode must be 8 or 13 digits.</errorMessage>
</ValidationRule>