force-app/main/default/objects/Product_Extension__c/validationRules/Min_Order_Qty_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Order_Qty_Positive</fullName>
    <active>true</active>
    <description>Minimum Order Quantity must be greater than zero when specified.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Min_Order_Qty__c)),
    Min_Order_Qty__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>Min_Order_Qty__c</errorDisplayField>
    <errorMessage>Minimum Order Quantity must be greater than zero.</errorMessage>
</ValidationRule>