force-app/main/default/objects/Product_Extension__c/validationRules/Weight_Requires_Unit.validationRule-meta.xml
<ValidationRule>
    <fullName>Weight_Requires_Unit</fullName>
    <active>true</active>
    <description>Weight Unit is required when Weight is specified and greater than zero.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Weight__c)),
    Weight__c &gt; 0,
    ISPICKVAL(Weight_Unit__c, "")
)</errorConditionFormula>
    <errorDisplayField>Weight_Unit__c</errorDisplayField>
    <errorMessage>Weight Unit is required when Weight is specified.</errorMessage>
</ValidationRule>