force-app/main/default/objects/Product_Extension__c/listViews/Active_Products.listView-meta.xml
<ListView>
    <fullName>Active_Products</fullName>
    <columns>NAME</columns>
    <columns>SKU_Code__c</columns>
    <columns>Brand__c</columns>
    <columns>Product_Category__c</columns>
    <columns>MRP__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Unit_of_Measure__c</columns>
    <columns>Case_Size__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Products</label>
</ListView>