force-app/main/default/objects/Product_Extension__c/listViews/All_Products.listView-meta.xml
<ListView>
    <fullName>All_Products</fullName>
    <columns>NAME</columns>
    <columns>SKU_Code__c</columns>
    <columns>Brand__c</columns>
    <columns>Product_Category__c</columns>
    <columns>MRP__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Unit_of_Measure__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>